# ros2_object_analytics

./: .gitignore  CHANGELOG.rst  README.md
install/: local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
object_analytics_fake/: CMakeLists.txt  package.xml
object_analytics_fake/include/: object_analytics_fake.hpp
object_analytics_fake/src/: object_analytics_fake.cpp  util.cpp  util.hpp
object_analytics_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_analytics_launch/launch/: analytics_movidius_ncs.py  analytics_object.py  default.rviz  object_rviz.py
object_analytics_msgs/: CHANGELOG.rst  CMakeLists.txt  object_analytics_msgs_mapping_rule.yaml  object_msgs_mapping_rule.yaml  package.xml
object_analytics_msgs/msg/: MovingObject.msg  MovingObjectStamped.msg  MovingObjectsInFrame.msg  ObjectInBox3D.msg  ObjectsInBoxes3D.msg  SocialObject.msg  SocialObjectsInFrame.msg  TrackedObject.msg  TrackedObjects.msg
object_analytics_node/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
object_analytics_node/config/: OragnizedMultiPlane
object_analytics_node/include/object_analytics_node/: const.hpp  visibility_control.h
object_analytics_node/include/object_analytics_node/common/: frame.hpp  frame_obj.hpp  object.hpp  utility.hpp
object_analytics_node/include/object_analytics_node/dataset/: track_dataset.hpp
object_analytics_node/include/object_analytics_node/filter/: kalman.hpp
object_analytics_node/include/object_analytics_node/merger/: merger.hpp  merger_node.hpp
object_analytics_node/include/object_analytics_node/model/: object2d.hpp  object3d.hpp  object_utils.hpp
object_analytics_node/include/object_analytics_node/movement/: moving_object_node.hpp  moving_objects.hpp  object_frame.hpp  param.hpp  remap.hpp
object_analytics_node/include/object_analytics_node/segmenter/: algorithm.hpp  algorithm_config.hpp  algorithm_provider.hpp  algorithm_provider_impl.hpp  organized_multi_plane_segmenter.hpp  segmenter.hpp  segmenter_node.hpp
object_analytics_node/include/object_analytics_node/splitter/: splitter.hpp  splitter_node.hpp
object_analytics_node/include/object_analytics_node/tracker/: matrix.cpp  trackerKCF.hpp  tracking.hpp  tracking_manager.hpp  tracking_node.hpp
object_analytics_node/include/object_analytics_node/util/: file_parser.hpp  logger.hpp
object_analytics_node/launch/: object_analytics.launch.py  object_analytics_no_tracking.launch.py  object_analytics_sample.launch.py  object_analytics_with_ncs.launch.py  object_analytics_with_openvino.launch.py  object_analytics_with_openvino_oss.launch.py  object_analytics_with_openvino_sdk.launch.py  object_analytics_with_tracking.launch.py  rs_param.yaml
object_analytics_node/launch/rviz/: default.rviz
object_analytics_node/src/: composition.cpp  const.cpp
object_analytics_node/src/common/: frame.cpp  frame_obj.cpp
object_analytics_node/src/dataset/: tr_dataset.cpp  tracker_dataset.cpp  trimg_MTdataset.cpp  trimg_dataset.cpp  trvid_dataset.cpp
object_analytics_node/src/filter/: kalman.cpp
object_analytics_node/src/merger/: merger.cpp  merger_node.cpp
object_analytics_node/src/model/: object2d.cpp  object3d.cpp  object_utils.cpp
object_analytics_node/src/movement/: moving_object_node.cpp  moving_objects.cpp  object_frame.cpp  param.cpp
object_analytics_node/src/segmenter/: algorithm_provider_impl.cpp  organized_multi_plane_segmenter.cpp  segmenter.cpp  segmenter_node.cpp
object_analytics_node/src/splitter/: splitter.cpp  splitter_node.cpp
object_analytics_node/src/tool/PETS-ANNOTATION-CONVERSION/: README.md  pets_anno.xsd  pets_det.xsd
object_analytics_node/src/tracker/: munkres.cpp  trackerKCF.cpp  tracking.cpp  tracking_main.cpp  tracking_manager.cpp  tracking_node.cpp  tracking_regression.cpp
object_analytics_node/src/util/: file_parser.cpp  logger.cpp
object_analytics_node/src/visualizer/: CMakeLists.txt  main.cpp
object_analytics_node/src/visualizer/control/: control.cpp  control.hpp  control_ds.cpp  control_ds.hpp
object_analytics_node/src/visualizer/data/: frame.cpp  frame.hpp  frame_obj.hpp  object.hpp
object_analytics_node/src/visualizer/data/dataset/: .trimg_MTdataset.cpp.swp  tr_dataset.cpp  track_dataset.hpp  trimg_MTdataset.cpp  trimg_dataset.cpp  trvid_dataset.cpp
object_analytics_node/src/visualizer/device/: stream_cap.cpp  stream_cap.hpp  stream_device.cpp  stream_device.hpp  stream_ds.cpp  stream_ds.hpp  stream_render.cpp  stream_render.hpp  stream_vid.cpp  stream_vid.hpp
object_analytics_node/src/visualizer/model/: math_model.cpp  math_model.hpp  math_sample.cpp  math_sample.hpp
object_analytics_node/src/visualizer/model/sample/: rw_sample.cpp  rw_sample.hpp  sample_model.cpp  sample_model.hpp  uniform_sample.cpp  uniform_sample.hpp
object_analytics_node/src/visualizer/model/stat/: gaussian_model.cpp  gaussian_model.hpp  stat_model.cpp  stat_model.hpp
object_analytics_node/src/visualizer/render_object/: render_ellipse.cpp  render_ellipse.hpp  render_image.cpp  render_image.hpp  render_lines.cpp  render_lines.hpp  render_object.cpp  render_object.hpp  render_rect.cpp  render_rect.hpp
object_analytics_node/src/visualizer/utils/: utility.hpp
object_analytics_node/src/visualizer/view/: view.cpp  view.hpp
object_analytics_node/tests/: CMakeLists.txt  unittest_merger.cpp  unittest_object2d.cpp  unittest_object3d.cpp  unittest_objectutils.cpp  unittest_segmenter.cpp  unittest_splitter.cpp  unittest_tracking.cpp  unittest_trackingmanager.cpp  unittest_util.cpp  unittest_util.hpp.in
object_analytics_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_analytics_rviz/src/: image_publisher.cpp  marker_publisher.cpp
object_analytics_visualization/: package.xml  setup.cfg  setup.py
object_analytics_visualization/launch/: object_analytics_rviz.py
object_analytics_visualization/object_analytics_visualization/: image_publisher.py  marker_publisher.py
patch/: ros1_bridge-patch.patch
