<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="3">
  <name>object_analytics_fake</name>
  <version>0.5.0</version>
  <description>The object_analytics_fake package</description>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <author email="mingjiex.qing@intel.com">qingmingjie</author>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/intel/ros2_object_analytics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
