<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="3">
  <name>object_analytics_launch</name>
  <version>0.3.0</version>
  <description>The object_analytics_launch package</description>
  <maintainer email="peter.han@intel.com">Peter Han</maintainer>
  <author email="peter.han@intel.com">Peter Han</author>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/intel/ros2_object_analytics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch</build_depend>

  <exec_depend>object_analytics_node</exec_depend>
  <exec_depend>movidius_ncs_launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
