<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="3">
  <name>object_analytics_msgs</name>
  <version>0.4.0</version>
  <description>object analytics message definition</description>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <author email="peter.han@intel.com">Peter Han</author>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/intel/ros2_object_analytics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>object_msgs</build_depend>



  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="object_analytics_msgs_mapping_rule.yaml" />
    <ros1_bridge mapping_rules="object_msgs_mapping_rule.yaml" />
  </export>
</package>
