<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2018 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="3">
  <name>object_analytics_visualization</name>
  <version>0.3.0</version>
  <description>The package for visualizing object analytics result</description>
  <author email="chris.ye@intel.com">Chris Ye</author>
  <maintainer email="chris.ye@intel.com">Chris Ye</maintainer>
  <license>Apache 2.0</license>

  <url type="repository">https://github.com/intel/ros2_object_analytics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>object_analytics_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv3</build_depend>

  <exec_depend>object_analytics_msgs</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv3</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
